fixing tags so blanks aren't created by post create fixing stats to replace spaces properly when reporting slimming down site view for easier readability

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -49,6 +49,8 @@ html, body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 .post {
